# diu-halu

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
configs/: comparison_mode.yaml  default.yaml  development.yaml  dodhalueval_method.yaml  halueval_method.yaml  hybrid_method.yaml  pipeline_example.yaml  pipeline_example_test.yaml  production.yaml  testing.yaml
data/prompts/: halueval_templates.yaml  templates.yaml.example
docs/: HOW_TO_USE_PROMPT_GENERATION.md  api-reference.md  architecture.md  configuration.md  generation-methods.md  halueval-integration.md  installation.md  quick-reference.md  usage.md
scripts/: dodhalueval  model_utils.py  run_pipeline.py  visualize_results.py
src/dodhalueval/: __init__.py
src/dodhalueval/cli/: __init__.py  commands.py
src/dodhalueval/core/: __init__.py  hallucination_detector.py  halueval_generator.py  knowledge_builder.py  llm_prompt_generator.py  perturbation.py  prompt_generator.py  prompt_validator.py  response_generator.py
src/dodhalueval/core/evaluators/: __init__.py  base.py  g_eval.py  huggingface_hhem_evaluator.py  selfcheck.py
src/dodhalueval/data/: __init__.py  dataset_builder.py  dataset_validator.py  pdf_processor.py
src/dodhalueval/evaluation/: halueval_compatibility.py
src/dodhalueval/models/: __init__.py  config.py  model_registry.py  schemas.py  validators.py
src/dodhalueval/providers/: __init__.py  base.py  fireworks_provider.py  openai_provider.py
src/dodhalueval/utils/: __init__.py  config.py  exceptions.py  logger.py  metrics.py  retry.py
tests/: conftest.py
tests/integration/: test_basic_integration.py  test_pdf_processing.py
tests/integration/pipeline/: test_dataset_pipeline.py  test_hallucination_detection.py  test_prompt_generation.py  test_response_generation.py
tests/unit/: test_cli.py  test_config.py  test_models.py  test_pdf_processor.py
tests/unit/core/: __init__.py  test_hallucination_detector.py
tests/unit/core/evaluators/: __init__.py  test_base.py
tests/unit/data/: __init__.py  test_pdf_processor.py
tests/unit/providers/: __init__.py  test_base_provider.py
tests/unit/utils/: __init__.py  test_exceptions.py  test_simple_utilities.py
