[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dodhalueval"
version = "0.1.0"
description = "DoD Hallucination Evaluation Benchmark for Large Language Models"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "DoD Research Team", email = "research@dod.mil"},
]
keywords = ["nlp", "hallucination", "evaluation", "benchmark", "dod"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "PyPDF2>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jsonlines>=3.0.0",
    "tqdm>=4.65.0",
    "tenacity>=8.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pre-commit",
    "hypothesis",
    "coverage[toml]",
]
llm = [
    "openai>=1.0.0",
    "transformers>=4.30.0",
]

[project.scripts]
dodhalueval = "dodhalueval.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/dod/dodhalueval"
Repository = "https://github.com/dod/dodhalueval"
Documentation = "https://dodhalueval.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dodhalueval = ["*.yaml", "*.json", "*.txt"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | test_outputs
  | papers
  | plan
  | \.claude
)/
| tests/unit/test_pdf_processor\.py
| test_.*\.py
| extract_pdf_pages\.py
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["dodhalueval"]
skip_glob = ["*/test_pdf_processor.py", "test_*.py", "extract_pdf_pages.py"]
skip = [".git", "__pycache__", ".venv", "venv", ".tox", ".eggs", "*.egg", "build", "dist", "test_outputs", "papers", "plan", ".claude"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true
disable_error_code = ["import", "attr-defined", "no-redef", "assignment", "arg-type", "return-value", "union-attr", "index", "operator", "misc", "no-untyped-def", "no-untyped-call", "call-arg", "type-arg", "var-annotated", "override", "list-item", "dict-item", "typeddict-item", "has-type", "valid-type", "name-defined", "no-any-return"]
exclude = [
    "tests/unit/test_pdf_processor.py",
    "test_*.py",
    "extract_pdf_pages.py",
    "papers/",
    "plan/",
    "test_outputs/",
    ".claude/"
]

[[tool.mypy.overrides]]
module = [
    "PyPDF2.*",
    "transformers.*",
    "openai.*",
    "dodhalueval.*",
    "tests.*"
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=dodhalueval",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]